# CZC

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.changes/: add-i18n-support-and-unit-tests-for-diagcontext-and-translator.md  add-submodule-and-lexer.md  add-unit-tests-and-integration-tests-for-lexer.md  config.toml  fix-makefile.md  implement-compilercontext-and-driver-for-improved-compilation-management.md  implement-diagnostic-system.md  init-commit.md
apps/czc/: main.cpp
include/czc/cli/: cli.hpp  context.hpp  driver.hpp  options.hpp
include/czc/cli/commands/: command.hpp  compiler_phase.hpp  lex_command.hpp  version_command.hpp
include/czc/cli/output/: formatter.hpp  json_formatter.hpp  text_formatter.hpp
include/czc/cli/phases/: lexer_phase.hpp
include/czc/common/: config.hpp  diagnostics.hpp  result.hpp
include/czc/diag/: diag_builder.hpp  diag_context.hpp  diagnostic.hpp  emitter.hpp  error_code.hpp  error_guaranteed.hpp  i18n.hpp  message.hpp  source_locator.hpp  span.hpp
include/czc/diag/emitters/: ansi_renderer.hpp  json_emitter.hpp  text_emitter.hpp
include/czc/lexer/: char_scanner.hpp  comment_scanner.hpp  ident_scanner.hpp  lexer.hpp  lexer_error.hpp  lexer_error_codes.hpp  lexer_source_locator.hpp  number_scanner.hpp  scanner.hpp  source_manager.hpp  source_reader.hpp  string_scanner.hpp  token.hpp  utf8.hpp
resources/i18n/: en.toml  zh-CN.toml
src/cli/: cli.cpp  context.cpp  driver.cpp  options.cpp
src/cli/commands/: lex_command.cpp  version_command.cpp
src/cli/output/: json_formatter.cpp  text_formatter.cpp
src/cli/phases/: lexer_phase.cpp
src/diag/: diag_builder.cpp  diag_context.cpp  diagnostic.cpp  error_code.cpp  i18n.cpp  message.cpp  span.cpp
src/diag/emitters/: ansi_renderer.cpp  json_emitter.cpp  text_emitter.cpp
src/lexer/: char_scanner.cpp  comment_scanner.cpp  ident_scanner.cpp  lexer.cpp  lexer_error.cpp  lexer_error_codes.cpp  lexer_source_locator.cpp  number_scanner.cpp  scanner.cpp  source_manager.cpp  source_reader.cpp  string_scanner.cpp  token.cpp  utf8.cpp
test/lexer/: ident_scanner_test.cpp  lexer_error_test.cpp  lexer_test.cpp  number_scanner_test.cpp  scanner_test.cpp  source_manager_test.cpp  source_reader_test.cpp  string_scanner_test.cpp  token_test.cpp  utf8_test.cpp
tests/cli/: cli_integration_test.cpp
tests/cli/unittest/: context_test.cpp  driver_test.cpp  formatter_test.cpp
tests/diag/unittest/: diag_context_test.cpp  i18n_test.cpp
tests/lexer/: lexer_integration_test.cpp
tests/lexer/unittest/: char_scanner_test.cpp  comment_scanner_test.cpp  ident_scanner_test.cpp  lexer_error_test.cpp  number_scanner_test.cpp  scanner_test.cpp  string_scanner_test.cpp
